# allegro_hand_linux

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
control_hand/src/: canAPI.cpp  can_communicator.cpp
gesture_classifier/: package.xml  setup.py
gesture_classifier/gesture_classifier/: gesture_classifier.py
gesture_classifier/gesture_classifier/submodules/model/: __init__.py
gesture_classifier/gesture_classifier/submodules/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite
grasp/: CMakeLists.txt  RockScissorsPaper.cpp  RockScissorsPaper.h  canAPI.cpp  canAPI.h  canDef.h  can_communicator.cpp  can_communicator.h  main.cpp
perception/: package.xml
src/control/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt
src/control/grasp/: CMakeLists.txt  Makefile  RockScissorsPaper.cpp  canAPI.h  canDef.h  can_communicator.cpp  cmake_install.cmake  controller.cpp  rDeviceAllegroHandCANDef.h
src/control_hand/: CMakeLists.txt  package.xml
src/control_hand/src/: RockScissorsPaper.cpp  controller.cpp
src/control_hand/srv/: Move.srv
src/controller/: CMakeLists.txt  package.xml
src/controller/include/controller/: RockScissorsPaper.h
src/controller/src/: RockScissorsPaper.cpp  canAPI.cpp  can_communicator.cpp  main.cpp
src/perception/: setup.py
